[gd_scene load_steps=3 format=3 uid="uid://b6kovjhytaid7"]

[ext_resource type="Script" path="res://UI/PowerUpsMenu.gd" id="1_rdt5x"]

[sub_resource type="LabelSettings" id="LabelSettings_aidb3"]
font_size = 32
font_color = Color(0.890196, 0.92549, 0.0156863, 1)

[node name="PowerUpsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rdt5x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 639.0
offset_bottom = 358.0
scale = Vector2(0.5, 0.5)
color = Color(0.368627, 0.32549, 0.709804, 1)

[node name="Nome" type="Label" parent="."]
layout_mode = 0
offset_left = 91.0
offset_right = 294.0
offset_bottom = 60.0
scale = Vector2(0.7, 0.7)
text = "Power Ups"
label_settings = SubResource("LabelSettings_aidb3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 79.0
offset_right = 235.0
offset_bottom = 179.0

[node name="Super Missil" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Super Missil"

[node name="Tiro triplo" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Tiro MultiDirecional"

[node name="Escudo" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Escudo"

[connection signal="pressed" from="VBoxContainer/Super Missil" to="." method="_on_super_missil_pressed"]
[connection signal="pressed" from="VBoxContainer/Tiro triplo" to="." method="_on_tiro_triplo_pressed"]
[connection signal="pressed" from="VBoxContainer/Escudo" to="." method="_on_escudo_pressed"]
